# secom

./: 001_Data_Exploration.ipynb  README.md  SECOM Dataset.pptx  pyproject.toml  requirements.txt
data/: Untitled.ipynb
