[tool.poetry]
name = "secom"
version = "0.1.0"
description = "Just exploring."
authors = ["Mohammad Ghufran <emghufran@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.6"
matplotlib = "^3.5.1"
numpy = "^1.22.3"
pandas = "^1.4.1"
plotly = "^5.6.0"
jupyter = "^1.0.0"
scikit-learn = "^1.0.2"
xgboost = "^1.5.2"
seaborn = "^0.11.2"
missingno = "^0.5.1"
shap = "^0.40.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
